# Drying-droplets

./: README.md  elliptic_integral.h
user_drivers/: Makefile.am  elliptic_integral.cc  thin_film_brinkman2D_triangle.cc
user_drivers/Thin_film_brinkman/: thin_film_brinkman1D_refineable.cc  thin_film_brinkman2D_ellipse_structured.cc
user_src/: Tthin_film_brinkman_elements.cc  refineable_thin_film_brinkman_elements.h  thin_film_brinkman_elements.h
user_src/thin_film_brinkman/: Makefile.am  Tthin_film_brinkman_elements.h  refineable_thin_film_brinkman_elements.cc  thin_film_brinkman_elements.cc
